--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Carousel slider 3D" />
+<html lang="es">
 
-    <link rel="stylesheet" href="styles.css" />
-    <script defer src="script.js"></script>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Carousel API picsum">
 
-    <title>Carousel Slider 3D</title>
-  </head>
-  <body></body>
+  <link rel="stylesheet" href="styles.css">
+  <script defer src="script.js"></script>
+
+  <title>Carousel API picsum</title>
+
+</head>
+
+<body>
+  <div id="carousel" class="carousel">
+  </div>
+  <div class="buttons">
+    <button id="prevBtn">❮</button>
+    <button id="nextBtn">❯</button>
+  </div>
+</body>
+
 </html>
