--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -16,10 +16,8 @@
 <body>
   <div id="carousel" class="carousel">
   </div>
-  <div class="buttons">
-    <button id="prevBtn">❮</button>
-    <button id="nextBtn">❯</button>
-  </div>
+  <button class="buttons" id="prevBtn">❮</button>
+  <button class="buttons" id="nextBtn">❯</button>
 </body>
 
 </html>
