--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Carousel API picsum">
+  <meta name="description" content="Carousel Picsum API">
 
   <link rel="stylesheet" href="styles.css">
   <script defer src="script.js"></script>
 
-  <title>Carousel API picsum</title>
+  <title>Carousel Picsum API</title>
 
 </head>
 
